--- a/prjShotMaster/App.config
+++ b/prjShotMaster/App.config
@@ -1,6 +1,66 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="prjShotMaster.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <prjShotMaster.Properties.Settings>
+            <setting name="DestinationFolder" serializeAs="String">
+                <value>\Desktop\_shotmaster</value>
+            </setting>
+            <setting name="FileFormat" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="JpegQuality" serializeAs="String">
+                <value>20</value>
+            </setting>
+            <setting name="TimerInterval" serializeAs="String">
+                <value>60</value>
+            </setting>
+            <setting name="PlaySound" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="SoundLocation" serializeAs="String">
+                <value>res\sound\shot.wav</value>
+            </setting>
+            <setting name="DestinationFolderS" serializeAs="String">
+                <value>\Desktop\_shotmaster</value>
+            </setting>
+            <setting name="DestinationFolderW" serializeAs="String">
+                <value>\Desktop\_shotmaster</value>
+            </setting>
+            <setting name="FileFormatS" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="FileFormatW" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="JpegQualityS" serializeAs="String">
+                <value>20</value>
+            </setting>
+            <setting name="JpegQualityW" serializeAs="String">
+                <value>90</value>
+            </setting>
+            <setting name="TimerIntervalS" serializeAs="String">
+                <value>60</value>
+            </setting>
+            <setting name="TimerIntervalW" serializeAs="String">
+                <value>60</value>
+            </setting>
+            <setting name="DeviceIndex" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="DeviceIndexS" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="DeviceIndexW" serializeAs="String">
+                <value>-1</value>
+            </setting>
+        </prjShotMaster.Properties.Settings>
+    </userSettings>
 </configuration>
