--- a/prjShotMaster/Properties/Settings.settings
+++ b/prjShotMaster/Properties/Settings.settings
@@ -15,7 +15,7 @@
       <Value Profile="(Default)">60</Value>
     </Setting>
     <Setting Name="PlaySound" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="SoundLocation" Type="System.String" Scope="User">
       <Value Profile="(Default)">res\sound\shot.wav</Value>
