--- a/prjShotMaster/App.config
+++ b/prjShotMaster/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -6,12 +6,12 @@
         </sectionGroup>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
-    </startup>
+        
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
     <userSettings>
         <prjShotMaster.Properties.Settings>
             <setting name="DestinationFolder" serializeAs="String">
-                <value>\Desktop\_shotmaster</value>
+                <value>\_shotmaster</value>
             </setting>
             <setting name="FileFormat" serializeAs="String">
                 <value>0</value>
