--- a/prjShotMaster/App.config
+++ b/prjShotMaster/App.config
@@ -29,10 +29,10 @@
                 <value>res\sound\shot.wav</value>
             </setting>
             <setting name="DestinationFolderS" serializeAs="String">
-                <value>\Desktop\_shotmaster</value>
+                <value>\_shotmaster</value>
             </setting>
             <setting name="DestinationFolderW" serializeAs="String">
-                <value>\Desktop\_shotmaster</value>
+                <value>\_shotmaster</value>
             </setting>
             <setting name="FileFormatS" serializeAs="String">
                 <value>0</value>
