--- a/prjShotMaster/App.config
+++ b/prjShotMaster/App.config
@@ -61,6 +61,9 @@
             <setting name="DeviceIndexW" serializeAs="String">
                 <value>-1</value>
             </setting>
+            <setting name="GitHubLink" serializeAs="String">
+                <value>https://github.com/resteem/ShotMaster</value>
+            </setting>
         </prjShotMaster.Properties.Settings>
     </userSettings>
 </configuration>
