--- a/prjShotMaster/App.config
+++ b/prjShotMaster/App.config
@@ -67,6 +67,9 @@
             <setting name="ShortcutKey" serializeAs="String">
                 <value>Ctrl + K + J</value>
             </setting>
+            <setting name="GitHubURI" serializeAs="String">
+                <value>https://github.com/resteem/ShotMaster</value>
+            </setting>
         </prjShotMaster.Properties.Settings>
     </userSettings>
 </configuration>
