Issue #3: aboutbox. Begining Issue #21

--- a/prjShotMaster/App.config
+++ b/prjShotMaster/App.config
@@ -61,14 +61,14 @@
             <setting name="DeviceIndexW" serializeAs="String">
                 <value>-1</value>
             </setting>
-            <setting name="GitHubLink" serializeAs="String">
-                <value>https://github.com/resteem/ShotMaster</value>
-            </setting>
             <setting name="ShortcutKey" serializeAs="String">
                 <value>Ctrl + K + J</value>
             </setting>
             <setting name="GitHubURI" serializeAs="String">
                 <value>https://github.com/resteem/ShotMaster</value>
+            </setting>
+            <setting name="DoActionW" serializeAs="String">
+                <value>True</value>
             </setting>
         </prjShotMaster.Properties.Settings>
     </userSettings>
