--- a/prjShotMaster/Properties/Settings.settings
+++ b/prjShotMaster/Properties/Settings.settings
@@ -53,14 +53,14 @@
     <Setting Name="DeviceIndexW" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">-1</Value>
     </Setting>
-    <Setting Name="GitHubLink" Type="System.String" Scope="User">
-      <Value Profile="(Default)">https://github.com/resteem/ShotMaster</Value>
-    </Setting>
     <Setting Name="ShortcutKey" Type="System.String" Scope="User">
       <Value Profile="(Default)">Ctrl + K + J</Value>
     </Setting>
     <Setting Name="GitHubURI" Type="System.Uri" Scope="User">
       <Value Profile="(Default)">https://github.com/resteem/ShotMaster</Value>
+    </Setting>
+    <Setting Name="DoActionW" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
